[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/GameOverCredits.gd" type="Script" id=1]
[ext_resource path="res://videos/post_credits_3.ogv" type="VideoStream" id=2]
[ext_resource path="res://videos/credits.ogv" type="VideoStream" id=3]
[ext_resource path="res://images/static.png" type="Texture" id=4]
[ext_resource path="res://materials/crt.material" type="Material" id=5]

[node name="GameOverCredits1" type="Control"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 680.0
margin_bottom = 510.0
color = Color( 0, 0, 0, 1 )

[node name="CreditsVideoPlayer" type="VideoPlayer" parent="."]
margin_left = 20.0
margin_top = 15.0
margin_right = 660.0
margin_bottom = 495.0
stream = ExtResource( 3 )
expand = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PostCreditsVideoPlayer" type="VideoPlayer" parent="."]
margin_left = 20.0
margin_top = 15.0
margin_right = 660.0
margin_bottom = 495.0
stream = ExtResource( 2 )
expand = false

[node name="Static" type="TextureRect" parent="."]
margin_left = 20.0
margin_top = 15.0
margin_right = 660.0
margin_bottom = 495.0
texture = ExtResource( 4 )
expand = true

[node name="CrtCurtain" type="ColorRect" parent="."]
material = ExtResource( 5 )
margin_left = 20.0
margin_top = 15.0
margin_right = 660.0
margin_bottom = 495.0

[connection signal="finished" from="CreditsVideoPlayer" to="." method="_on_credits_video_player_finished"]
[connection signal="finished" from="PostCreditsVideoPlayer" to="." method="_on_post_credits_video_player_finished"]
